<resources>
    <string name="app_name">Notes</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="cancel_number">C</string>
    <string name="pin_enter">Enter pin:</string>
    <string name="name_hint">Enter your name</string>
    <string name="add_button">Add note</string>
    <string name="save_button">Save</string>
    <string name="header_hint">header</string>
    <string name="body_hint">body</string>
    <string name="title_dialog">Create new user?</string>
    <string name="answer_yes">YES</string>
    <string name="answer_no">NO</string>
    <string name="error">ERROR</string>
    <string name="dialog_toast">New user created</string>
    <string name="wrong_password">Incorrect password</string>
</resources>
